--- a/public/index.html
+++ b/public/index.html
@@ -37,32 +37,45 @@
 
     <section class="manga-section">        
         <div id="mangaList" class="manga-grid">
-            <!-- Static manga items -->
-            <div class="manga-item">
-                <img src="./img/one_piece.jpeg" alt="One Piece" class="manga-cover">
-            </div>
-
-            <div class="manga-item">
-                <img src="./img/blue_lock.jpeg" alt="Blue Lock" class="manga-cover">
-            </div>
-
-            <div class="manga-item">
-                <img src="./img/Magnified.jpg" alt="that time i got reincarnated as a slime" class="manga-cover">
-            </div>
-
-            <div class="manga-item">
-                <img src="./img/one_punch.jpeg" alt="One Punch Man" class="manga-cover">
-            </div>
-
-            <div class="manga-item">
-                <img src="./img/hxh.jpg" alt="Hunter X Hunter" class="manga-cover">
-            </div>
-
+            <!-- Manga items will be dynamically added here -->
         </div>
     </section>
 
     <footer>
         <p>&copy; 2024 MangaWave. All rights reserved. | <a href="https://discord.gg/kyCckj7773">Join our Discord</a></p>
     </footer>
+
+    <script>
+        async function fetchMangaDataById(mangaId) {
+            try {
+                const response = await fetch(`/manga?id=${mangaId}`);
+                const mangaData = await response.json();
+
+                if (mangaData) {
+                    const mangaListContainer = document.getElementById('mangaList');
+                    const mangaItem = document.createElement('div');
+                    mangaItem.classList.add('manga-item');
+                    mangaItem.innerHTML = `
+                        <img src="${mangaData.poster}" alt="${mangaData.name}" class="manga-cover">
+                    `;
+                    mangaListContainer.appendChild(mangaItem);
+                } else {
+                    console.error(`Manga data not found for ID: ${mangaId}`);
+                }
+            } catch (error) {
+                console.error('Error fetching manga data:', error);
+            }
+        }
+
+        async function fetchMultipleMangaData(mangaIds) {
+            for (const id of mangaIds) {
+                await fetchMangaDataById(id);
+            }
+        }
+
+        // Example usage: Replace with the desired manga IDs
+        const mangaIds = ['2', '580', '4330', '3262', '12', '1828']; // Replace these with actual IDs you need to use
+        fetchMultipleMangaData(mangaIds);
+    </script>
 </body>
 </html>
