--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,12 @@
 
     <section class="manga-grid-section">
         <div id="mangaList" class="manga-grid">
-            <p>Loading popular manga...</p>
+
         </div>
         
         <div id="mangaDetails" class="manga-details-container hidden">
             <div class="manga-details-poster">
-                <img id="mangaPoster" src="" alt="Manga Poster">
+                <img id="mangaPoster" src="" alt="">
             </div>
             <div class="manga-details-content">
                 <h3 id="mangaTitle" class="manga-details-header"></h3>
