--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaWave API</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -56,6 +57,7 @@
     </footer>
 
     <script>
+        
         document.querySelector('.cta-button').addEventListener('click', function () {
             document.querySelector('.features').scrollIntoView({ behavior: 'smooth' });
         });
