--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="MangaWave API - Explore Manga Like Never Before">
     <meta property="og:description" content="Explore a wide range of manga titles and genres with MangaWave API. Access detailed manga information, chapters, and more. Perfect for developers looking to integrate manga data into their apps.">
-    <meta property="og:image" content="https://manga-yyxp.onrender.com/favicon.ico">
+    <meta property="og:image" content="https://manga-yyxp.onrender.com/logo.png">
     <meta property="og:url" content="https://manga-yyxp.onrender.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="MangaWave API">
@@ -18,7 +18,7 @@
     <meta name="twitter:creator" content="@YourTwitterHandle">
     <meta name="twitter:title" content="MangaWave API - Explore Manga Like Never Before">
     <meta name="twitter:description" content="Explore a wide range of manga titles and genres with MangaWave API. Access detailed manga information, chapters, and more. Perfect for developers looking to integrate manga data into their apps.">
-    <meta name="twitter:image" content="https://manga-yyxp.onrender.com/favicon.ico">
+    <meta name="twitter:image" content="https://manga-yyxp.onrender.com/logo.png">
 
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
