--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MangaWave API</title>
-
-    <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="MangaWave API - Explore Manga Like Never Before">
     <meta property="og:description" content="Explore a wide range of manga titles and genres with MangaWave API. Access detailed manga information, chapters, and more. Perfect for developers looking to integrate manga data into their apps.">
-    <meta property="og:image" content="https://manga-yyxp.onrender.com/logo.png">
+    <meta property="og:image" content="https://manga-yyxp.onrender.com/logo.jpg">
     <meta property="og:url" content="https://manga-yyxp.onrender.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="MangaWave API">
-    
-    <!-- Twitter Card Meta Tags (optional but recommended) -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:creator" content="@YourTwitterHandle">
-    <meta name="twitter:title" content="MangaWave API - Explore Manga Like Never Before">
-    <meta name="twitter:description" content="Explore a wide range of manga titles and genres with MangaWave API. Access detailed manga information, chapters, and more. Perfect for developers looking to integrate manga data into their apps.">
-    <meta name="twitter:image" content="https://manga-yyxp.onrender.com/logo.png">
-
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
