--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         <div class="features">
             <div class="feature-card">
                 <h3>Abundant Data 📚</h3>
-                <p>Access comprehensive information on over 8000 manga titles. Dive into a treasure trove of genres, chapters, and more at your fingertips.</p>
+                <p>Access comprehensive information on over 7,000 manga titles.</p>
             </div>
             <div class="feature-card">
                 <h3>Fast & Reliable 🚀</h3>
